--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "npm i && npm i -D typescript && react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
