--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start --host 0.0.0.0",
+    "start": "HOST=0.0.0.0 PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
